--- a/MediaBrowser.WebDashboard/dashboard-ui/moviesrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviesrecommended.html
@@ -4,7 +4,9 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="moviesRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="movie" data-require="scripts/moviesrecommended">
+    <div id="moviesRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="movie" data-require="scripts/moviesrecommended,css!thirdparty/paper-button/paper-button-style">
+
+        <link rel="import" href="thirdparty/paper-button/paper-button.html">
 
         <div class="libraryViewNav scopedLibraryViewNav">
             <a href="#" class="ui-btn-active">${TabSuggestions}</a>
@@ -21,7 +23,7 @@
                 <div id="resumableSection" style="display: none;" class="homePageSection">
                     <div>
                         <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
-                        <a href="#" class="accentButton categorySyncButton" data-category="Resume"><i class="fa fa-refresh"></i>${ButtonSync}</a>
+                        <paper-button raised class="secondary mini categorySyncButton" data-category="Resume"><i class="fa fa-refresh"></i>${ButtonSync}</paper-button>
                     </div>
 
                     <div id="resumableItems" class="itemsContainer">
@@ -31,7 +33,7 @@
                 <div class="homePageSection">
                     <div>
                         <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestMovies}</h1>
-                        <a href="#" class="accentButton categorySyncButton" data-category="Latest"><i class="fa fa-refresh"></i>${ButtonSync}</a>
+                        <paper-button raised class="secondary mini categorySyncButton" data-category="Latest"><i class="fa fa-refresh"></i>${ButtonSync}</paper-button>
                     </div>
 
                     <div id="recentlyAddedItems" class="itemsContainer">
