--- a/MediaBrowser.WebDashboard/dashboard-ui/channelitems.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/channelitems.html
@@ -16,7 +16,7 @@
         <div data-role="content">
             <div class="viewSettings">
 
-                <h2 class="categoryTitle" style="margin: 0 1em 0 0; display: inline-block; vertical-align: middle; font-weight:300;"></h2>
+                <h1 class="categoryTitle" style="margin: 0 1em 0 0; display: inline-block; vertical-align: middle;"></h1>
 
                 <div class="listTopPaging">
                 </div>
