--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguide.html
@@ -19,7 +19,7 @@
                 <div class="tvGuideHeader">
                     <div class="channelTimeslotHeader">
                         <div class="timeslotHeaderInner">
-                            <a href="#popupConfig" data-rel="popup" class="accentButton" style="display:block;padding-left:5px;"><i class="fa fa-calendar"></i><span class="currentDate"></span></a>
+                            <a href="#popupConfig" data-rel="popup" style="display:block;padding-left:5px;color:#fff;text-decoration:none;font-weight:normal!important;padding:4px 10px 4px 0;"><i class="fa fa-calendar" style="margin-right:3px;"></i><span class="currentDate"></span></a>
                         </div>
                     </div>
                     <div class="timeslotHeaders hiddenScrollX"></div>
