--- a/MediaBrowser.WebDashboard/dashboard-ui/login.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/login.html
@@ -4,8 +4,10 @@
     <title>${TitleSignIn}</title>
 </head>
 <body>
-    <div id="loginPage" data-role="page" class="page standalonePage" data-theme="b" data-require="scripts/loginpage">
+    <div id="loginPage" data-role="page" class="page standalonePage" data-theme="b" data-require="scripts/loginpage,css!thirdparty/paper-button/paper-button-style">
 
+        <link rel="import" href="thirdparty/iron-icons/iron-icons.html">
+        <link rel="import" href="thirdparty/paper-button/paper-button.html">
         <div data-role="content">
 
             <form class="manualLoginForm" style="display: none; text-align: center; margin: 0 auto;">
@@ -17,17 +19,14 @@
 
                 <label for="txtManualPassword" style="text-align: left;">${LabelPassword}</label>
                 <input type="password" name="txtManualPassword" id="txtManualPassword" placeholder="password" />
-                <p>
-                    <button type="submit" data-icon="check">
-                        ${ButtonSignIn}
-                    </button>
-                </p>
+                <button type="submit" data-icon="check" style="display:none;" class="btnSubmitLoginForm">
+                    ${ButtonSignIn}
+                </button>
+                <button type="submit" data-role="none" class="clearButton">
+                    <paper-button raised class="submit block"><iron-icon icon="check"></iron-icon><span>${ButtonSignIn}</span></paper-button>
+                </button>
 
-                <p>
-                    <button type="button" data-icon="delete" onclick="LoginPage.cancelLogin();" class="btnCancel">
-                        ${ButtonCancel}
-                    </button>
-                </p>
+                <paper-button raised class="cancel block btnCancel" onclick="LoginPage.cancelLogin();"><iron-icon icon="close"></iron-icon><span>${ButtonCancel}</span></paper-button>
                 <br />
                 <br />
             </form>
@@ -39,14 +38,12 @@
                 <br />
 
                 <div class="readOnlyContent" style="margin: 2em auto 0;">
-                    <a href="#" onclick="LoginPage.showManualForm($.mobile.activePage, true);" data-role="button" data-icon="lock">${ButtonManualLogin}</a>
+                    <paper-button raised class="cancel block" onclick="LoginPage.showManualForm(jQuery.mobile.activePage, true);"><iron-icon icon="lock"></iron-icon><span>${ButtonManualLogin}</span></paper-button>
                 </div>
             </div>
 
             <div class="readOnlyContent" style="margin: 0 auto 1em;">
-                <a href="forgotpassword.html" data-role="button" data-icon="info">
-                    ${ButtonForgotPassword}
-                </a>
+                <paper-button raised class="cancel block btnForgotPassword" onclick="LoginPage.cancelLogin();"><iron-icon icon="info"></iron-icon><span>${ButtonForgotPassword}</span></paper-button>
 
                 <p class="disclaimer" style="text-align: center; margin-top: 2em;"></p>
 
