--- a/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvrecommended.html
@@ -4,7 +4,9 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="tvRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series" data-require="scripts/tvrecommended">
+    <div id="tvRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series" data-require="scripts/tvrecommended,css!thirdparty/paper-button/paper-button-style">
+
+        <link rel="import" href="thirdparty/paper-button/paper-button.html">
 
         <div class="libraryViewNav globalNav" style="display: none;">
             <a href="index.html">${TabHome}</a>
@@ -28,8 +30,8 @@
 
                 <div id="resumableSection" style="display: none;" class="scopedContent homePageSection">
                     <div>
-                        <h1 class="listHeader firstListHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
-                        <a href="#" class="accentButton categorySyncButton" data-category="Resume"><i class="fa fa-refresh"></i>${ButtonSync}</a>
+                        <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
+                        <paper-button raised class="secondary mini categorySyncButton" data-category="Resume"><i class="fa fa-refresh"></i>${ButtonSync}</paper-button>
                     </div>
 
                     <div id="resumableItems" class="itemsContainer">
@@ -39,7 +41,7 @@
                 <div class="homePageSection">
                     <div>
                         <h1 class="listHeader nextUpHeader" style="display:inline-block;vertical-align:middle;">${HeaderNextUp}</h1>
-                        <a href="#" class="accentButton categorySyncButton" data-category="NextUp"><i class="fa fa-refresh"></i>${ButtonSync}</a>
+                        <paper-button raised class="secondary mini categorySyncButton" data-category="NextUp"><i class="fa fa-refresh"></i>${ButtonSync}</paper-button>
                     </div>
                     <div id="nextUpItems" class="itemsContainer">
                     </div>
