--- a/MediaBrowser.WebDashboard/dashboard-ui/wizardstart.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/wizardstart.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="wizardStartPage" data-role="page" class="page standalonePage wizardPage" data-require="scripts/wizardstartpage,css!thirdparty/paper-button/paper-button-style">
+    <div id="wizardStartPage" data-role="page" class="page standalonePage wizardPage" data-require="scripts/wizardstartpage,paperbuttonstyle">
 
         <link rel="import" href="thirdparty/paper-button/paper-button.html">
 
