--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="liveTvRecordingsPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvrecordings,css!thirdparty/paper-button/paper-button-style">
+    <div id="liveTvRecordingsPage" data-role="page" class="page libraryPage liveTvPage" data-contextname="${HeaderLiveTv}" data-require="scripts/livetvrecordings,paperbuttonstyle">
         <link rel="import" href="thirdparty/paper-button/paper-button.html">
 
         <div class="libraryViewNav">
@@ -25,7 +25,7 @@
                 <div id="latestRecordings" style="display: none;">
                     <div>
                         <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestRecordings}</h1>
-                        <paper-button raised class="secondary mini categorySyncButton" data-category="Latest"><i class="fa fa-refresh"></i>${ButtonSync}</paper-button>
+                        <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><i class="fa fa-refresh"></i>${ButtonSync}</paper-button>
                     </div>
                     <div class="recordingItems itemsContainer"></div>
                     <br />
