--- a/MediaBrowser.WebDashboard/dashboard-ui/login.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/login.html
@@ -4,7 +4,7 @@
     <title>${TitleSignIn}</title>
 </head>
 <body>
-    <div id="loginPage" data-role="page" class="page standalonePage" data-theme="b" data-require="scripts/loginpage,css!thirdparty/paper-button/paper-button-style">
+    <div id="loginPage" data-role="page" class="page standalonePage" data-theme="b" data-require="scripts/loginpage,paperbuttonstyle">
 
         <link rel="import" href="thirdparty/iron-icons/iron-icons.html">
         <link rel="import" href="thirdparty/paper-button/paper-button.html">
