break up jquery mobile

--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="editItemMetadataPage" data-role="page" class="page libraryPage metadataEditorPage" data-contextname="${HeaderMetadataManager}" data-require="scripts/editorsidebar,scripts/edititemmetadata">
+    <div id="editItemMetadataPage" data-role="page" class="page libraryPage metadataEditorPage" data-contextname="${HeaderMetadataManager}" data-require="scripts/editorsidebar,scripts/edititemmetadata,jqmicons">
         <div data-role="content editPageContent">
             <div class="editPageSidebar smoothScrollY">
                 <div class="libraryTree">
