--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvsuggested.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvsuggested.html
@@ -17,17 +17,17 @@
         </div>
         <div data-role="content">
             <div class="ehsContent">
-                <div id="activePrograms">
+                <div id="activePrograms" class="homePageSection">
                     <h1 class="listHeader">${HeaderWhatsOnTV}</h1>
                     <div class="activeProgramItems itemsContainer"></div>
                     <br />
                 </div>
-                <div id="upcomingPrograms">
+                <div id="upcomingPrograms" class="homePageSection">
                     <h1 class="listHeader">${HeaderUpcomingPrograms}</h1>
                     <div class="upcomingProgramItems itemsContainer"></div>
                     <br />
                 </div>
-                <div id="upcomingTvMovies">
+                <div id="upcomingTvMovies" class="homePageSection">
                     <div>
                         <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderUpcomingMovies}</h1>
                         <a href="livetvitems.html?type=movies" class="clearLink" style="margin-left:1em;vertical-align:middle;"><paper-button raised class="more mini">${ButtonMoreItems}</paper-button></a>
@@ -35,7 +35,7 @@
                     <div class="upcomingTvMovieItems itemsContainer"></div>
                     <br />
                 </div>
-                <div id="upcomingSports">
+                <div id="upcomingSports" class="homePageSection">
                     <div>
                         <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderUpcomingSports}</h1>
                         <a href="livetvitems.html?type=sports" class="clearLink" style="margin-left:1em;vertical-align:middle;"><paper-button raised class="more mini">${ButtonMoreItems}</paper-button></a>
